Bug 1454042 - Allow missing pipeline information for cross-process iframes. r=sotaro

We should always have the pipeline information for in-process things like
async images, but for cross-process iframes we might not have the information
right away if the content process doesn't get around to sending it for a while.

MozReview-Commit-ID: 18F5nqilXoV